--- a/alle/index.html
+++ b/alle/index.html
@@ -10,7 +10,7 @@
             --mio-primary: #6EA8FF;
             --mio-secondary: #FB923C;
             --mio-dark: #02317C;
-            --mio-light: #F8FAFC;
+            --mio-light: #E5E7EB;
             --mio-white: #ffffff;
         }
 
